# JournalScanner

./: .gitignore  Makefile  README.md  line_utils.py  rectification_utils.py  requirements.txt  rotate_simple.py  scan.py  setup.cfg  threshold_utils.py
misc/: cem.py  h2.py  hough_transform.py  integral_imamge.py  traveling_salesman_CEM.py
src/scansnake/: line_utils.py  rectification_utils.py  rotate_simple.py  scan.py  threshold_utils.py
src/scansnake/misc/: cem.py  h2.py  hough_transform.py  integral_imamge.py  traveling_salesman_CEM.py
