[metadata]
name = scansnake
version = 1.0.0
description = 'CLI Document Scanning Tool'

[options]
python_requires = >=3.10
package_dir =
  =src
packages = find_namespace:
include_package_data = true
install_requires =
    imutils
    matplotlib
    numba
    numpy
    opencv-python
    Pillow
    scikit-image
    scipy
    shapely

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scan = scansnake.scan:cli
